# Solving-optimization-problems

./: .gitignore  02.01-Production-Models-with-Linear-Constraints.ipynb  02.03-Linear-Blending-Problem.ipynb  README.md  environment.yml  pyproject.toml
1-pyomo bootcamp/section3/: EX30+(paper+company).ipynb  GLPK-Colab.ipynb  IPOPT_Colab.ipynb
2-optimization with python/section4/: ex1_investments.ipynb  ex2_investments.ipynb  ex3_cost_prod.ipynb  ex4_min_path.ipynb
pyomo bootcamp/section3/: EX10.ipynb  EX6+travel+from+A+to+B.ipynb
