[tool.poetry]
name = "opt-env"
version = "0.0.1"
description = ""
authors = ["JPR <jpr@novozymes.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.26.0"
pandas = "^2.1.0"
matplotlib = "^3.8.0"
scipy = "^1.11.2"
plotly = "^5.17.0"
statsmodels = "^0.14.0"
scikit-learn = "^1.3.0"
gekko = "^1.0.6"


[tool.poetry.dev-dependencies]
black = "*"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
